--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nx/jest": "16.6.0",
     "@nx/js": "16.6.0",
     "@nx/linter": "16.6.0",
-    "@nx/react-native": "16.6.0",
+    "@nx/react-native": "^16.6.0",
     "@nx/workspace": "16.6.0",
     "@react-native-community/cli": "11.3.5",
     "@react-native-community/cli-platform-android": "11.3.5",
